# src/main/resources/swagger/api.yml
@@ -5,7 +5,7 @@ info:
   description: API for managing Process Tasks
 
 servers:
-  - url: http://localhost:8888/api
+  - url: http://localhost:8888
     description: Local Server
 paths:
   /process-tasks:
@@ -105,6 +105,41 @@ paths:
               schema:
                 type: string
                 example: "Task deleted successfully"
+  /process-tasks/process/{id}:
+    parameters:
+      - name: id
+        in: path
+        description: Unique Process ID to find process tasks
+        required: true
+        schema:
+          type: integer
+      - name: page
+        in: query
+        description: Page number for pagination
+        required: false
+        schema:
+          type: integer
+          default: 0
+      - name: size
+        in: query
+        description: Number of records per page
+        required: false
+        schema:
+          type: integer
+          default: 10
+
+    get:
+      summary: Get Process Tasks By Process Id
+      operationId: getByProcessId
+      responses:
+        200:
+          description: Successfully retrieved process tasks by process id
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/ProcessTaskDTO'
 
   /process-instance-tasks:
     get:
